Resolves markdown linter issues

--- a/resources/notes/javascript/es2015.md
+++ b/resources/notes/javascript/es2015.md
@@ -1,23 +1,21 @@
 ---
 layout: page
-title: ES2015
+title: ES2015 - The Shape of Javascript to Come
 ---
 
-[CodeSchool - ES2015 - The Shape of Javascript to Come](https://www.codeschool.com/courses/es2015-the-shape-of-javascript-to-come)
-
-## The Shape of Javascript to Come
+[ES2015 - The Shape of Javascript to Come](https://www.codeschool.com/courses/es2015-the-shape-of-javascript-to-come)
 
 ES2015, formerly known as ES6, is the most extensive update to the JavaScript language since the publication of its
 first edition in 1997.
 
 The committee decided to use the year of release, instead of version number.
 
-# Level 1 - Declarations
+## Level 1 - Declarations
 
 The exercises will focus on a forum web app. The first feature will be loading users profile into the sidebar of the
 site.
 
-## Declarations with let
+### Declarations with let
 
 The loadProfiles function takes an array of users and adds their profile to the sidebar.
 
@@ -31,7 +29,7 @@ The loadProfiles function takes an array of users and adds their profile to the 
 </html>
 ```
 
-**The loadProfiles Function**
+#### The loadProfiles Function
 
 ```js
 function loadProfiles(userNames) {
@@ -60,7 +58,7 @@ Variables declared with `let` are not hoisted to the top of the scope. Instead o
 to an `undeclared` value for the references, you’ll instead get a ReferenceError informing you that the variable is
 not defined.
 
-## Declarations with let in for loops
+### Declarations with let in for loops
 
 When using `var` in for loops, there can be unexpected behavior.
 
@@ -76,7 +74,7 @@ function loadProfiles(userNames) {
 
 This results in output:
 
-```
+```text
 Fetched for Alex
 Fetched for Alex
 Fetched for Alex
@@ -115,7 +113,7 @@ function loadProfiles(userNames) {
 }
 ```
 
-## Declarations with const
+### Declarations with const
 
 Magic Number - A literal value without a clear meaning. If you end up using the number multiple times, it will lead to
 unnecessary duplication, which is bad code. People won’t know if these literal values are related or not.
@@ -138,7 +136,8 @@ const MAX_USERS;
 MAX_USERS = 10;
 ```
 
-**Block Scoped**
+#### Block Scoped
+
 Constants are blocked scoped, which mean they are not hoisted to the top of the function. So if you define something
 within an `if` block, and try to access it from outside, it will return an error.
 
@@ -151,11 +150,12 @@ if (userNames.length > MAX_USERS) {
 console.log(MAX_REPLIES) // ReferenceError. MAX_REPLIES is not defined)
 ```
 
-# Level 2 - Functions
+## Level 2 - Functions
 
-## Functions
+### Functions
 
-**Default Parameters**
+#### Default Parameters
+
 Unexpected arguments might cause errors during function execution. This code runs just fine, because it’s passing an
 array to the function as expected.
 
@@ -187,7 +187,7 @@ function loadProfiles(userNames = []) {
 }
 ```
 
-**Named Parameters**
+#### Named Parameters
 
 The **options object** is a widely used pattern that allows user-defined settings to be passed to a function in the
 form of properties on an object.
@@ -248,7 +248,7 @@ function setPageThread(name, { popular = "", expires, activeClass } = {}) {
 }
 ```
 
-## Rest Parameter, Spread Operator, and Arrow Functions
+### Rest Parameter, Spread Operator, and Arrow Functions
 
 Tags are a useful feature in web applications that have lots of read content. It helps filter results down to specific
 topics. Let’s add these to the forum.
@@ -262,7 +262,7 @@ displayTags("songs", "lyrics")
 displayTags("songs", "lyrics", "bands")
 ```
 
-**Arguments Object**
+#### Arguments Object
 
 In classic Javascript we could have used the `arguments` object, which is a build-in Array-like object that corresponds
 to the arguments of a function.
@@ -293,7 +293,7 @@ function displayTags(targetElement) {
 }
 ```
 
-**Rest Parameter**
+#### Rest Parameter
 
 The new **rest parameter** syntax allows us to represent an indefinite number of arguments as an Array. This way,
 changes to function signature are **less likely to break code**.
@@ -316,7 +316,7 @@ function displayTags(targetElement, ...tags) {
 
 The rest parameter must always go last in the function signature.
 
-**Spread Operator**
+#### Spread Operator
 
 We need a way to convert an Array into individual arguments upon a function call.
 
@@ -343,7 +343,7 @@ Prefixing the `tags` array with the spread operator makes it so that the call is
 The syntax for _rest parameters_ and the _spread operator_ **look the same**, but the former is used in
 **function definitions** and the later in **function invocations**.
 
-**JavaScript Objects**
+#### JavaScript Objects
 
 JavaScript objects can help us with the **encapsulation**, **organization**, and **testability** of our code.
 
@@ -381,7 +381,7 @@ TagComponent.prototype.render = function() {
 Properties set on the constructor function can be accessed from other instance methods. This is why the reference to
 `this.urlPath` works within the `render()` method.
 
-**Issues with Scope in Callback Functions**
+#### Issues with Scope in Callback Functions
 
 Anonymous functions passed as callbacks to other functions create **their own scope**.
 
@@ -402,7 +402,7 @@ TagComponent.prototype.render = function() {
 }
 ```
 
-**Arrow Functions**
+#### Arrow Functions
 
 Arrow functions bind to the scope of where they are **defined**, not where they are used. This is also known as
 **lexical binding**.
@@ -422,9 +422,9 @@ TagComponent.prototype.render = function() {
 }
 ```
 
-# Level 3 - Objects, Strings, and Object.assign
+## Level 3 - Objects, Strings, and Object.assign
 
-## Objects and Strings
+### Objects and Strings
 
 The _buildUser_ function returns an object with the _first_, _last_, and _fullName_ properties.
 
@@ -443,11 +443,13 @@ let user = buildUser("Sam", "Williams")
 
 As you can see, we end up repeating the same thing as the key and value here in the return statement.
 
-**Object Initializer**
+#### Object Initializer
 
 We can shorten this by using the object initializer shorthand, which removes duplicate variable names.
 
-    return {first, last, fullName}; // way cleaner
+```javascript
+return {first, last, fullName}; // way cleaner
+```
 
 This only works when the properties and values use the same name. It works anywhere a new object is returned, not just
 from functions.
@@ -460,7 +462,7 @@ let friends = ["Brook", "Tyler"]
 let user = { name, age, friends }
 ```
 
-**Object Destructuring**
+##### Object Destructuring
 
 ```js
 // generates 3 separate variables based on the object returned
@@ -509,7 +511,7 @@ return {
   }
 ```
 
-**Template Strings**
+#### Template Strings
 
 Template strings are **string literals** allowing embedded expressions. This allows for a much better way to do
 **string interpolation**.
@@ -550,7 +552,7 @@ Regards,
 console.log(veryLongText)
 ```
 
-## Object.assign
+### Object.assign
 
 In this example we’ll add a count-down timer to a forum. The countdown timer displays the time left for users to undo
 their posts after they’ve been created. Once the time is up, they cannot undo it anymore.
@@ -699,11 +701,11 @@ function countdownTimer(target, timeLeft, options = {}) {
 }
 ```
 
-# Level 4 - Arrays, Maps, and Sets
+## Level 4 - Arrays, Maps, and Sets
 
-## Arrays
+### Arrays
 
-### Destructuring
+#### Destructuring
 
 We typically access array elements by their index, but doing so for more than just a couple of elements can quickly
 turn into a **repetitive task**.
@@ -819,7 +821,7 @@ for (let property of post) {
 }
 ```
 
-### Finding an Element in an Array
+#### Finding an Element in an Array
 
 `Array.find` returns the **first element** in the array that satisfies a provided testing function.
 
@@ -847,7 +849,7 @@ We can alternatively shorten this function by omitting the curly braces and pare
 let admin = users.find(user => user.admin)
 ```
 
-## Maps
+### Maps
 
 _Maps_ are a **data structure** composed of a collection of **key/value** pairs. They are very useful to store simple
 data, such as property values. Each key is associated with a single value.
@@ -907,7 +909,7 @@ for (let [key, value] of mapSettings) {
 }
 ```
 
-### WeakMap
+#### WeakMap
 
 A _WeakMap_ is a type of _Map_ where **only objects** can be passed as keys. Primitive data types — such as strings,
 numbers, booleans, etc. — are **not allowed**.
@@ -964,9 +966,9 @@ someOtherFunction(user) // Once this function returns, 'user' can be garbage col
 WeakMaps don’t prevent the garbage collector from collecting objects currently used as keys, but that are no longer
 referenced anywhere else in the system. The garbage collector removes the object from the WeakMap as well.
 
-## Sets
+### Sets
 
-### Limitations with Arrays
+#### Limitations with Arrays
 
 Arrays don’t enforce uniqueness of items. Duplicate entries are allowed.
 
@@ -1013,7 +1015,7 @@ let [a, b, c, d] = tags
 console.log(a, b, c, d) // Javascript Programming {version: '2015'} Web
 ```
 
-### WeakSet
+#### WeakSet
 
 The _WeakSet_ is a type of _Set_ where **only objects** are allowed to be stored.
 
@@ -1045,7 +1047,7 @@ for (let wt of weakTags) {
 }
 ```
 
-### Using WeakSets to Show Unread Posts
+#### Using WeakSets to Show Unread Posts
 
 If we can’t read values from a weakset, when should we use them?
 
@@ -1098,11 +1100,11 @@ for (let post of postArray) {
 
 While we can’t read values from a WeakSet, we can check to see if an object is present in the group.
 
-# Level 5 - Classes and Modules
+## Level 5 - Classes and Modules
 
-## Classes
+### Classes
 
-### Adding a Sponsor to the Sidebar
+#### Adding a Sponsor to the Sidebar
 
 A common approach to encapsulation in JavaScript is using a **constructor function**.
 
@@ -1125,7 +1127,7 @@ let sponsorWidget = new SponsorWidget(name, description, url)
 sponsorWidget.render()
 ```
 
-### Using the New Class Syntax
+#### Using the New Class Syntax
 
 To define a class, we use the class keyword followed by the name of the class. The body of a class is the part between
 curly braces.
@@ -1140,7 +1142,7 @@ class SponsorWidget {
 
 Instance method definitions in classes look just like the method initializer shorthand in objects’.
 
-### Initializing Values in the Constructor Function
+#### Initializing Values in the Constructor Function
 
 ```js
 class SponsorWidget {
@@ -1161,7 +1163,7 @@ let sponsorWidget = new SponsorWidget(name, description, url)
 sponsorWidget.render()
 ```
 
-### Accessing Class Instance Variables
+#### Accessing Class Instance Variables
 
 ```js
 class SponsorWidget {
@@ -1190,7 +1192,7 @@ API.
 The class syntax is not introducing a new object model to JavaScript. It’s just syntactical sugar over the existing
 prototype-based inheritance (syntactical sugar).
 
-### Class Inheritance
+#### Class Inheritance
 
 We can use class inheritance to reduce code repetition. Child classes **inherit** and **specialize** behavior defined in
 parent classes.
@@ -1221,7 +1223,7 @@ class SponsorWidget extends Widget {
 }
 ```
 
-### Overriding Inherited Methods
+#### Overriding Inherited Methods
 
 Child classes can invoke methods from their **parent** classes via the _super_ object.
 
@@ -1255,9 +1257,10 @@ class SponsorWidget extends Widget {
 
 Super holds a reference to the parent version of the parse() method.
 
-## Modules - Part 1
+### Modules - Part 1
 
-**Polluting the Global Namespace**
+#### Polluting the Global Namespace
+
 The common solution for modularizing code relies on using **global variables**. This increases the chances of
 **unexpected side effects** and potential **naming conflicts**.
 
@@ -1281,7 +1284,7 @@ flashMessage("Hello");
 
 Global variables can cause naming conflicts.
 
-### Creating Modules
+#### Creating Modules
 
 Let’s create a new JavaScript module for displaying flash messages.
 
@@ -1311,7 +1314,7 @@ Modules still need to be imported via `<script>`, but **no longer pollute the gl
 </html>
 ```
 
-### Can’t Default Export Multiple Functions
+#### Can’t Default Export Multiple Functions
 
 Modules give us total control over which methods we expose publicly. The _default_ type export **limits** the number of
 functions we can export from a module.
@@ -1328,7 +1331,7 @@ function logMessage(message) {
 }
 ```
 
-### Using Named Exports
+#### Using Named Exports
 
 In order to **export multiple functions** from a single module, we can use the **named** export.
 
@@ -1349,7 +1352,7 @@ alertMessage("Hello from alert")
 logMessage("Hello from log")
 ```
 
-### Importing a Module as an Object
+#### Importing a Module as an Object
 
 We can also **import the entire module** as an object and call each funtion as a **property** from this object.
 
@@ -1361,7 +1364,7 @@ flash.alertMessage("Hello from alert")
 flash.logMessage("Hello from log")
 ```
 
-### Removing Repeated Export Statements
+#### Removing Repeated Export Statements
 
 Instead of calling export statements every time we want to export (publicly expose) a function, we can instead export
 them as a list with a single command.
@@ -1379,9 +1382,9 @@ function logMessage(message) {
 export { alertMessage, logMessage }
 ```
 
-## Modules - Part 2
+### Modules - Part 2
 
-### Extracting Hardcoded Constants
+#### Extracting Hardcoded Constants
 
 Refining constants across our application is **unnecessary repetition** and can lead to bugs.
 
@@ -1414,7 +1417,7 @@ We cannot redefine constants within the same scope, but here we have 3 different
 code is correct. It’s still unnecessary duplication. The problem is that if we change one constant, then we have to find
 all the other ones and update them.
 
-### Exporting Constants
+#### Exporting Constants
 
 Placing constants in their own module allows them to be reused across other modules and **hides implementation details**
 (a.k.a., **encapsulation**).
@@ -1430,7 +1433,7 @@ const MAX_REPLIES = 3;
 export { MAX_USERS, MAX_REPLIES };
 ```
 
-### How to Import Constants\*\*
+#### How to Import Constants\*\*
 
 To import constants, we can use the exact same syntax for importing functions.
 
@@ -1448,7 +1451,7 @@ function loadProfiles(userNames) {
 }
 ```
 
-### Exporting Class Modules With Default Export
+#### Exporting Class Modules With Default Export
 
 Classes can also be exported from modules using the same syntax as functions. Instead of 2 individual functions, we now
 have 2 instance methods that are part of a class.
@@ -1472,7 +1475,7 @@ export default class FlashMessage {
 
 The _default_ keyword allows this class to be set to any variable name once it’s imported.
 
-### Using Class Modules with Default Export
+#### Using Class Modules with Default Export
 
 Imported classes are assigned to a variable using _import_ and can then be used to create **new instances**.
 
@@ -1485,7 +1488,7 @@ flash.renderAlert()
 flash.renderLog()
 ```
 
-### Using Class Modules with Named Export
+#### Using Class Modules with Named Export
 
 Another way to export classes is to first define them, and then use the export statement with the class name inside
 curly braces.
@@ -1510,11 +1513,11 @@ flash.renderAlert()
 flash.renderLog()
 ```
 
-# Level 6 - Promises, Iterators, and Generators
+## Level 6 - Promises, Iterators, and Generators
 
-## Promises
+### Promises
 
-### Fetching Poll Results From the Server
+#### Fetching Poll Results From the Server
 
 It’s very important to understand how to work with JavaScript’s **single-thread model**. Otherwise, we might
 accidentally **freeze** the entire app, to the detriment of user experience.
@@ -1525,7 +1528,7 @@ While these actions occur, they might trigger other actions, such as fetching da
 While we wait for a response, we still must be able to interact with the page. If we mess up and write bad code that
 blocks the page, we can make elements non-responsive, affecting the user experience.
 
-### Avoiding Code That Blocks
+#### Avoiding Code That Blocks
 
 Once the browser blocks executing a script, it stops running other scripts, rendering elements and responding to user
 events like keyboard and mouse interactions.
@@ -1548,7 +1551,7 @@ getPollResultsFromServer("Sass vs LESS", function(results) {
 We are passing a callback to the function now, so that it can be responsible for calling the callback function when it
 receives the response from the API server.
 
-### Passing Callbacks to Continue Execution
+#### Passing Callbacks to Continue Execution
 
 In continuation-passing style (CPS) async programming, we tell a function how to continue execution by passing
 callbacks.
@@ -1582,7 +1585,7 @@ getPollResultsFromServer(pollName, function(error, results) {
 })
 ```
 
-### The Best of Both Worlds With Promises
+#### The Best of Both Worlds With Promises
 
 A Promise is a new abstraction that allows us to write async code in an easier way.
 
@@ -1598,7 +1601,7 @@ getPollResultsFromServer("Sass vs. LESS")
 
 This is still non-blocking, but not using nested callbacks anymore.
 
-### Creating a New Promise Object
+#### Creating a New Promise Object
 
 The Promise constructor function takes an anonymous function with 2 callback arguments known as **handlers**.
 
@@ -1616,7 +1619,7 @@ function getPollResultsFromServer(pollName) {
 
 Handlers are responsible for either _resolving_, or _rejecting_ the Promise.
 
-### The Lifecycle of a Promise Object
+#### The Lifecycle of a Promise Object
 
 Creating a new Promise automatically sets it to the **pending** state. Then, it can do 1 of 2 things: become
 **fulfilled** or **rejected**.
@@ -1629,7 +1632,7 @@ let fetchingResults = getPollResultsFromServer("Sass vs. less")
 
 The `fetchingResults` variable contains the Promise object in the pending state.
 
-### Resolving a Promise
+#### Resolving a Promise
 
 Let’s wrap the _XMLHttpRequest_ object API within a Promise. Calling the _resolve()_ handler moves the Promise to a
 **fulfilled** state.
@@ -1651,7 +1654,7 @@ function getPollResultsFromServer(pollName) {
 }
 ```
 
-### Reading Results From a Promise
+#### Reading Results From a Promise
 
 We can use the _then()_ method to read results from the Promise once it’s resolved. This method takes a function that
 will only be invoked once the Promise is **resolved**.
@@ -1672,7 +1675,7 @@ fetchingResults.then(function(results) {
 
 The callback passed to _then()_ will receive the argument that was passed to _resolve()_.
 
-### Removing Temporary Variables
+#### Removing Temporary Variables
 
 We are currently using a **temporary variable** to store our Promise object, but it’s not really necessary. Let’s
 replace it with **chaining function calls**.
@@ -1683,7 +1686,7 @@ getPollResultsFromServer("Sass vs Less").then(function(results) {
 })
 ```
 
-### Chaining Multiple Thens
+#### Chaining Multiple Thens
 
 ```js
 getPollResultsFromServer("Sass vs Less")
@@ -1696,7 +1699,7 @@ getPollResultsFromServer("Sass vs Less")
   })
 ```
 
-### Rejecting a Promise
+#### Rejecting a Promise
 
 We’ll call the reject() handler for **unsuccessful status codes** and also when the _onerror_ event is triggered on our
 request object. Both move the Promise to **a rejected state**.
@@ -1723,7 +1726,7 @@ function getPollResultsFromServer(pollName) {
 
 Rejecting a Promise moves it to a _rejected_ state.
 
-### Catching Rejected Promises
+#### Catching Rejected Promises
 
 Once an error occurs, execution moves immediately to the _catch()_ function. None of the remaining _then()_ functions
 are invoked.
@@ -1742,7 +1745,7 @@ getPollResultsFromServer("Sass vs Less")
   })
 ```
 
-### Passing Functions as Arguments
+#### Passing Functions as Arguments
 
 We can make our code more succinct by passing function arguments to _then_, instead of using anonymous functions.
 
@@ -1762,9 +1765,9 @@ getPollResultsFromServer("Sass vs. Less")
   });
 ```
 
-## Iterators
+### Iterators
 
-### What We Know About Iterables So Far
+#### What We Know About Iterables So Far
 
 Arrays are **iterable** objects, which means we can use them with _for…of_.
 
@@ -1789,7 +1792,7 @@ for (let p of post) {
 }
 ```
 
-### Iterables Return Iterators
+#### Iterables Return Iterators
 
 Iterables return an **iterator** object. This object knows how to **access items from a collection** 1 at a time,
 while **keeping track of its current position** within the sequence.
@@ -1818,7 +1821,7 @@ let name = thirdRun.value
 
 The next() method is called by the loop. Once ‘done’ is true, the loop is ended.
 
-### Understanding the next Method
+#### Understanding the next Method
 
 Each time _next()_ is called, it returns an object with **2** specific properties: _done_ and _value_.
 
@@ -1832,7 +1835,7 @@ value(any)
 * Any value returned by the iterator. When _done_ is _true_, this returns _undefined_.
   { done: true, value: undefined }
 
-### The First Step Toward an Iterator Object
+#### The First Step Toward an Iterator Object
 
 An iterator is an object with a _next_ property, returned by the result of calling the _Symbol.iterator_ method.
 
@@ -1855,7 +1858,7 @@ for (let p of post) {
 }
 ```
 
-### Navigating the Sequence
+#### Navigating the Sequence
 
 We can use _Object.keys_ to build an array with property names for our object. We’ll also use a counter (_count_) and a
 boolean flag (_isDone_) to help us navigate our collection.
@@ -1879,7 +1882,7 @@ post[Symbol.iterator] = function() {
 };
 ```
 
-### Running Our Custom Iterator
+#### Running Our Custom Iterator
 
 We’ve successfully made our plain JavaScript object **iterable**, and it can now be used with _for…of_.
 
@@ -1904,7 +1907,7 @@ let values = [...post];
 console.log(values); // ['New Features in JS', 19]
 ```
 
-### Iterables With Destructuring
+#### Iterables With Destructuring
 
 Lastly, destructuring assignments will also work with iterables.
 
@@ -1914,9 +1917,9 @@ console.log(title) // New Features in JS
 console.log(replies) // 19
 ```
 
-## Generators
+### Generators
 
-### Generator Functions
+#### Generator Functions
 
 The *function ** declaration defines **generator functions\*\*. These are special functions from which we can use the
 *yield\* keyword to return **iterator** objects.
@@ -1936,7 +1939,7 @@ function* nameList() { // ... }
 function * nameList() { // ... }
 ```
 
-### Generator Objects and for...of
+#### Generator Objects and for...of
 
 Generator functions return objects that provide the same _next_ method expected by _for…of_, the _spread operator_,
 and the _destructuring assignment_.
@@ -1959,7 +1962,7 @@ let [first, second] = nameList()
 console.log(first, second) // Sam Tyler
 ```
 
-### Replacing Manual Iterator Objects
+#### Replacing Manual Iterator Objects
 
 Knowing how to manually craft an iterator object is important, but there is a **shorter** syntax.
 
@@ -1981,7 +1984,7 @@ post[Symbol.iterator] = function() {
 }
 ```
 
-### Refactoring to Generator Functions
+#### Refactoring to Generator Functions
 
 Each time _yield_ is called, our function returns a **new iterator** object and then **pauses** until it’s called again.
 
